@@ -23,6 +23,7 @@ Suggests:
     devtools,
     e1071,
     expm,
+    ggplot2,
     lhs,
     MASS,
     Matrix,
@@ -32,6 +33,7 @@ Suggests:
     parallel,
     parallelMap,
     ParamHelpers,
+    plotly,
     plyr,
     RANN,
     rpart,
