@@ -9,12 +9,14 @@ library(numDeriv)
 library(e1071)
 library(mda)
 library(expm)
+library(ggplot2)
 library(MASS)
 library(Matrix)
 library(mlbench)
 library(parallel)
 library(parallelMap)
 library(ParamHelpers)
+library(plotly)
 library(rpart)
 library(shape)
 library(testthat)
