@@ -3,6 +3,7 @@ flacco_1.6:
 -- fixed a bug, which ignored the boundaries of the feature object when plotting the functional, contour or surface plot
 -- enable simultaneous computation of "all features" within BBOB- and smoof-import
 -- enable further configurations (boundaries, sample type) within BBOB- and smoof-import
+-- visualize the 1D function plot, as well as the 2D contour and surface plots with plotly
 - information content features:
 -- fixed a bug, which returned a useless value for eps.max (it used to return the maximum of the considered epsilon-values)
 
